src/objects/Compassion_Fund__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <inlineHelpText>WEX may require additional information in support of your application (receipts, invoices, medical information, personal financial, mortgage, or insurance information). Will you be able to provide this information as specified in the guideline?</inlineHelpText>
        <label>Additional Information</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_Event__c</fullName>
        <description>Applications may be submitted up to six months after the qualifying event</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date of Event</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disclaimer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disclaimer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Submitter&apos;s email. Updated by Process Builder</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Employee ID</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employment_Length__c</fullName>
        <inlineHelpText>Length of time employed at WEX. Please note that we are collecting this for informational purposes only. Federal law and IRS regulations prohibit the WEX Compassion Fund from considering length of employment and performance as criteria for issuing funding</inlineHelpText>
        <label>Employment Length</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fund_Manager_Comments__c</fullName>
        <description>Where Fund Manager can make summary notes about the request which is displayed during the Approval Process.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fund Manager Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Grant_Amount__c</fullName>
        <description>Amount of Grant, not to exceed $2500</description>
        <label>Grant Amount</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grant_Range__c</fullName>
        <formula>CASE(TEXT(Qualifying_Event_Type__c),
  &quot;Catastrophic Illness or Injury&quot;, &quot;Tier 3 (Up to $5000)&quot;,
  &quot;Death/Funeral Expenses&quot;, &quot;Tier 1 (Up to $1000)&quot;,
  &quot;Domestic Abuse&quot;, &quot;Tier 2 (Up to $2500)&quot;,
  &quot;Military Deployment&quot;, &quot;Tier 1 (Up to $1000)&quot;,
  &quot;Qualified or Natural Disaster&quot;, &quot;Tier 3 (Up to $5000)&quot;,
  &quot;Violent Crime&quot;, &quot;Tier 2 (Up to $2500)&quot;, &quot;UNKNOWN&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grant Range</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Home City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Country__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Home Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Postal_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Postal Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Home State/Province</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Street_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Home Street Address</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Home_Zip__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Home Zip</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Home_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mobile/Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Office_Location__c</fullName>
        <label>Office Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>EFS - Indianapolis, Indiana</fullName>
                </value>
                <value>
                    <fullName>EFS - Memphis, Tennessee</fullName>
                </value>
                <value>
                    <fullName>EFS - Nashville, Tennessee</fullName>
                </value>
                <value>
                    <fullName>EFS - Ogden, Utah</fullName>
                </value>
                <value>
                    <fullName>WEX Asia - Singapore</fullName>
                </value>
                <value>
                    <fullName>WEX Australia - Melbourne</fullName>
                </value>
                <value>
                    <fullName>WEX Bank - Midvale, Utah</fullName>
                </value>
                <value>
                    <fullName>WEX Brazil - São Paulo</fullName>
                </value>
                <value>
                    <fullName>WEX Europe - 1 London Bridge</fullName>
                </value>
                <value>
                    <fullName>WEX Europe Services (Lille) - SAS France</fullName>
                    <isActive>false</isActive>
                    <label>WEX Europe Services (Lille) - SAS France</label>
                </value>
                <value>
                    <fullName>WEX Europe Services (main office) - Emperor Court, Emperor Way, Crewe Business Park</fullName>
                </value>
                <value>
                    <fullName>WEX Europe Services As (Oslo) - Rosenholm Campus</fullName>
                    <isActive>false</isActive>
                    <label>WEX Europe Services As (Oslo) - Rosenholm Campus</label>
                </value>
                <value>
                    <fullName>WEX Europe Services BV (Breda) - Esso Card Center</fullName>
                    <isActive>false</isActive>
                    <label>WEX Europe Services BV (Breda) - Esso Card Center</label>
                </value>
                <value>
                    <fullName>WEX Europe Services GmbH (Hamburg) - Esso Card Center</fullName>
                    <isActive>false</isActive>
                    <label>WEX Europe Services GmbH (Hamburg) - Esso Card Center</label>
                </value>
                <value>
                    <fullName>WEX Europe Services SAS (Sedoc) - rue de la Haie Coq</fullName>
                    <isActive>false</isActive>
                    <label>WEX Europe Services SAS (Sedoc) - rue de la Haie Coq</label>
                </value>
                <value>
                    <fullName>WEX Europe Services SRL (Italy) - Esso Card Centre</fullName>
                    <isActive>false</isActive>
                    <label>WEX Europe Services SRL (Italy) - Esso Card Centre</label>
                </value>
                <value>
                    <fullName>WEX Fuel Management - Louisville, Kentucky</fullName>
                </value>
                <value>
                    <fullName>WEX Health, General - West Fargo, North Dakota</fullName>
                </value>
                <value>
                    <fullName>WEX Health, Press - St. Louis, Missouri</fullName>
                </value>
                <value>
                    <fullName>WEX Health, Sales - Edina, Minnesota</fullName>
                </value>
                <value>
                    <fullName>WEX Health, Support - Simsbury, Connecticut</fullName>
                </value>
                <value>
                    <fullName>WEX Health - Omaha, Nebraska</fullName>
                </value>
                <value>
                    <fullName>WEX New Zealand - Auckland</fullName>
                </value>
                <value>
                    <fullName>WEX - South Portland, Maine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Assistance__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>List any other assistance that you/the applicant have applied for, are receiving, or anticipate receiving as a result of the qualifying event.</inlineHelpText>
        <label>Other Assistance</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Permission_to_Share__c</fullName>
        <inlineHelpText>WEX may occasionally look to share stories of employees who have benefitted from the Fund. Are you willing to share your story?</inlineHelpText>
        <label>Permission to Share</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purpose_of_Funds__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Explain in detail how you/the applicant will use the grant funds, if received. IMPORTANT: Federal Law prohibits WEX from providing grants to be used to pay medical deductibles from WEX’s plans or to cover loss in wages due to reduction in hours.</inlineHelpText>
        <label>Purpose of Funds</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Qualifying_Event_Type__c</fullName>
        <label>Qualifying Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Catastrophic Illness or Injury</fullName>
                </value>
                <value>
                    <fullName>Death/Funeral Expenses</fullName>
                </value>
                <value>
                    <fullName>Domestic Abuse</fullName>
                    <isActive>false</isActive>
                    <label>Domestic Abuse</label>
                </value>
                <value>
                    <fullName>Domestic Violence</fullName>
                </value>
                <value>
                    <fullName>Military Deployment</fullName>
                </value>
                <value>
                    <fullName>Qualified or Natural Disaster</fullName>
                </value>
                <value>
                    <fullName>Violent Crime</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Request__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please describe the reason that you are requesting assistance from WEX, including details about the qualifying event and how this has impacted, or will impact you, financially.</inlineHelpText>
        <label>Reason for Request</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <defaultValue>&quot;Submitted&quot;</defaultValue>
        <label>Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Manager Review</fullName>
                </value>
                <value>
                    <fullName>Board Review</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supporting_Documentation__c</fullName>
        <description>Please upload any supporting documentation to your application</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please upload any supporting documentation to your application</inlineHelpText>
        <label>Supporting Documentation</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <label>Compassion Fund</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Qualifying_Event_Type__c</columns>
        <columns>Request_Status__c</columns>
        <columns>Date_of_Event__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CF-{0000}</displayFormat>
        <label>Compassion Fund Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compassion Funds</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>